<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/home" android:title="@string/home"
            android:icon="@drawable/img">
        </item>
    </group>

    <item android:title="Chức năng">

        <menu>
            <item android:id="@+id/info" android:title="@string/info"
                android:icon="@drawable/img">
            </item>
            <item android:id="@+id/showRecord" android:title="@string/showRecord"
                android:icon="@drawable/img">
            </item>
            <item android:id="@+id/changePass" android:title="@string/changePass"
                android:icon="@drawable/img">
            </item>
            <item android:id="@+id/exit" android:title="@string/Exit"
                android:icon="@drawable/img">
            </item>
        </menu>

    </item>

    <item android:title="Trang web">

        <menu>
            <item android:id="@+id/vku" android:title="@string/vku"
                android:icon="@drawable/img">
            </item>
            <item android:id="@+id/elearning2" android:title="@string/elearning2"
                android:icon="@drawable/img">
            </item>
        </menu>

    </item>
</menu>